# CppCodingDojo

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Todo.md
.devcontainer/: Dockerfile  devcontainer.json
scripts/: run_tests.sh
src/: lib.cpp  lib.hpp  tests.cpp
